changed docker-compose and Dockerfile, migration schema, tests for controllers and for services, added MessageResponseDto and README file